@@ -1,3 +1,8 @@
+2008-04-01  Jens Granseuer  <jensgr@gmx.net>
+
+	* sound-properties-capplet.c: (device_added_callback): don't show
+	modems and other unwanted devices (bug #523888)
+
 2008-03-27  Jens Granseuer  <jensgr@gmx.net>
 
 	* sound-properties.glade: don't mention esd (bug #519722)
